# RoboEgoPipe

./: .gitignore  README.md  download_models.sh  pyproject.toml  test_ds_image.py  test_rectify_image.py
descriptions/genrobot/: ego_v2.urdf
roboegopipe/: test_mediapipe_video.py
roboegopipe/cammodel/: double_sphere.py
roboegopipe/dataloader/: genrobot.py  utils.py
roboegopipe/depthestimator/: stereo.py
roboegopipe/mediapipe/: detector.py  utils.py
roboegopipe/viewer/: _camera.py  camera.py  traj.py  viewer.py
tests/dataloader/genrobot/: save_first_frame.py  test_view_eepose.py  test_view_eepose_rerun.py  view_in_rerun.py  view_urdf_tf.py
tests/mediapipe/: hand_detect_image.py  hand_detect_video.py  hand_detect_video_view_3d.py
